Get Opera support in a functional state